# irmcd

./: COPYING  Makefile.am  Makefile.in  README  config.h.in  configure  configure.in
grammar/: convert.sh  irmd.grammar  irmd.voca
irmcd/: Makefile.am  Makefile.in  buffer_manager.c  buffer_manager.h  common.h  config.c  controller.c  controller.h  irmcd.c  irmcd.conf  logger.c  logger.h  queue.c  queue.h  string_util.c  string_util.h  tcp_sock.c  tcp_sock.h
irmcd/scenario/: cd_player_input.txt  cd_player_onoff.txt  cd_player_playcd.txt  cd_player_voldown.txt  cd_player_voldown10.txt  cd_player_volup.txt  cd_player_volup10.txt  dvd_player_onoff.txt  learn.txt  learn_cancel.txt  pc_on.txt  test.txt  test2.txt  tv_pc_off.txt
irmcd_notify/: Makefile  config.c  config.h  debug.h  irmcd_notify.c  irmcd_notify.conf
julius_script/: run_sample.sh
